# libattachsql

./: .gitignore  .travis.yml  .zuul.yaml  Makefile.am  README.md  README.rst  bindep.txt  bootstrap.sh  configure.ac  libattachsql.pc.in  valgrind.supp  version.h.in
.ci/: clang-3.4.sh  clang-ia32.sh  clang.sh  cppcheck.sh  docs.sh  gcc-distcheck.sh  gcc-ia32.sh  gcc.sh  install-libuv.sh  no-optional.sh  scanbuild.sh  valgrind.sh
docs/: conf.py  conf.py.in  include.am  index.rst
docs/_templates/: layout.html
docs/api/: compiling.rst  connection.rst  error.rst  examples.rst  group.rst  index.rst  pool.rst  query.rst  statement.rst  types.rst  utility.rst
docs/appendix/: authors.rst  version_history.rst
docs/contributors/: authors.rst  coding_standards.rst  docs.rst  github.rst  index.rst  introduction.rst  test_cases.rst
docs/introduction/: compiling.rst  index.rst  license.rst  troubleshooting.rst  using.rst  version_history.rst  whatis.rst
examples/: basic_query.c  buffered_query.c  escaped_query.c  group_query.c  include.am  pool_query.c  prepared_statement.c  setup.sql
libattachsql-1.0/: attachsql.h  connect.h  constants.h  error.h  group.h  include.am  query.h  statement.h  structs.h  utility.h  visibility.h
libattachsql-2.0/: attachsql.h  constants.h  group.h  include.am  query.h  statement.h  utility.h  visibility.h
libattachsql2/: attachsql.h  connect.h  constants.h  error.h  include.am  pool.h
m4/: ax_check_openssl.m4  ax_check_zlib.m4  ax_harden_compiler_flags.m4  ax_mac_universal.m4  boost.m4  config_extra.m4  include.am
man/: include.am
playbooks/: clang.yaml  distcheck.yaml  docs.yaml  scanbuild.yaml  valgrind.yaml
playbooks/base/: post-logs.yaml
rpm/: include.mk  libattachsql.spec.in  spec.in
src/: ascore.h  buffer.cc  buffer.h  command.cc  command.h  common.h  connect.cc  connect.h  constants.h  debug.h  error.cc  error_internal.h  include.am  net.cc  net.h  pack.cc  pack.h  pack_macros.h  pool.cc  query.cc  query_internal.h  return.h  sha1.cc  statement.cc  statement.h  statement_getset.cc  structs.h  utility.cc
src/ascore/: ascore.h  buffer.cc  buffer.h  command.cc  command.h  common.h  connect.cc  connect.h  constants.h  debug.h  include.am  net.cc  net.h  pack.cc  pack.h  pack_macros.h  return.h  sha1.cc  statement.cc  statement.h  structs.h
src/asql/: common.h  connect.cc  connect_internal.h  error.cc  error_internal.h  group.cc  include.am  pool.cc  query.cc  query_internal.h  statement.cc  statement_internal.h  structs_internal.h  utility.cc
tests/: connect.cc  connect_error.cc  include.am  multi_query.cc  no_backslash.cc  pool.cc  pool_compress.cc  query.cc  query_buffer.cc  query_compress.cc  query_compress_semi_block.cc  query_error.cc  query_semi_block.cc  query_ssl.cc  query_ssl_compress.cc  query_uds.cc  statement.cc  statement_param.cc  statement_reuse.cc  statement_semi_block.cc  statement_twice.cc  transaction.cc  version.cc
tests/asql/: connect.cc  connect_error.cc  group.cc  group_compress.cc  include.am  multi_query.cc  no_backslash.cc  pool.cc  pool_compress.cc  query.cc  query_buffer.cc  query_compress.cc  query_compress_semi_block.cc  query_error.cc  query_semi_block.cc  query_ssl.cc  query_ssl_compress.cc  query_uds.cc  statement.cc  statement_param.cc  statement_reuse.cc  statement_semi_block.cc  statement_twice.cc  transaction.cc  version.cc
tests/ssl/: ca-cert.pem  ca-key.pem  client-cert.pem  client-key-enc.pem  client-key.pem  client-req.pem  server-cert.pem  server-key-enc.pem  server-key.pem  server-req.pem
yatl/: include.am  lite.h
